Fixed WordPress's alignleft and alightright classes

--- a/frankenstein.css/partials/6.top/partials/_wordpress.scss
+++ b/frankenstein.css/partials/6.top/partials/_wordpress.scss
@@ -14,12 +14,12 @@
     to float content and have a margin between it and content
     typically used within CMS editors.
 */
-.align-right {
+.alignright {
     float: right;
     margin-left: em(10px);
 }
 
-.align-left {
+.alignleft {
     float: right;
     margin-right: em(10px);
 }
